Allocator: nfs client as extra container (#1089)
* allow node status RECONCILING

* nfs client as workload